<resources>
    <string name="app_name" translatable="false">Pion base</string>
    <string name="hd_wallpaper" translatable="false">HD Wallpaper</string>
    <string name="featured">Featured</string>
    <string name="top_wallpaper">Top Wallpapers</string>
    <string name="see_more">See more</string>
    <string name="home_tab">Home</string>
    <string name="categories_tab">Categories</string>
    <string name="setting">Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="language">Language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="auto_change_wallpaper">Auto Change Wallpaper</string>
    <string name="dynamic_battery_saver">Dynamic Battery Saver</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="share_with_friend">Share with Friend</string>
    <string name="share_wallpaper" translatable="false">Share Wallpaper</string>
    <string name="download_wallpaper" translatable="false">Download Wallpaper</string>
    <string name="favorite_wallpaper" translatable="false">Favorite Wallpaper</string>
    <string name="select_custom_wallpaper">Select Custom Wallpaper</string>
    <string name="please_select_language">Please select a language</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="this_is_demo">This is demo dialog</string>
    <string name="pion_tech">Pion Tech</string>
    <string name="website_url" translatable="false">https://piontech.co</string>
    <string name="facebook">Facebook:</string>
    <string name="telegram">Telegram:</string>
    <string name="piontechglobal" translatable="false">\@piontechglobal</string>
    <string name="my_favorites">My Favorites</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="no_results_found">No results found</string>
    <string name="search_wallpapers" translatable="false">Search wallpapers&#8230;</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="animals">Animals</string>
    <string name="arts">Arts</string>
    <string name="nature">Nature</string>
    <string name="layout_ads">Layout ads</string>
    <string name="onboard_1">Onboard 1</string>
    <string name="onboard_2">Onboard 2</string>
    <string name="onboard_4">Onboard 4</string>
    <string name="english">English</string>
    <string name="admob_application_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="please_wait" translatable="false">Please wait!</string>
    <string name="home">Home</string>
    <string name="loading">Loading</string>
    <string name="loading_ads">Loading ads</string>
    <string name="something_error">Something error</string>
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="loading_data">Loading data</string>
    <string name="general_setting">General setting</string>
    <string name="information_about">Information about</string>
    <string name="developer">Developer</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="gdpr">GDPR</string>
    <string name="store_name">Store name:</string>
    <string name="website">Website:</string>
    <string name="why_do_you_see_ads">Why do you see ads?</string>
    <string name="des_advertisement_1">Production and development require funds, and one of them comes from advertising revenue.</string>
    <string name="des_advertisment_2">1. You can support by purchasing the premium version or ads-free version to remove ads.</string>
    <string name="des_advertisement_3">2. Please contact us via email to participate in the pilot program. In this program, you can use a version with fewer ads, but it may not be optimized for performance.</string>
    <string name="what_ads_type_do_we_use">What ads type do we use?</string>
    <string name="des_advertisement_4">We are associated with many advertising network partners, and the biggest one is Google Ads for major ad formats.</string>
    <string name="des_5">- Full-screen ads interspersed between screens</string>
    <string name="des_6">- Banner, native ads are customized as components of the ad (usually have a yellow label)</string>
    <string name="des_7">We always try to balance user experience and ads.</string>
    <string name="customize_wallpaper">Customize wallpaper</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="no_wallpapers_found">No wallpapers found</string>
    <string name="set_wallpaper_success">Wallpaper set successfully!</string>
    <string name="error_reading_file">Error reading file: %s</string>
    <string name="error_crop">Crop Error: %s</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="both">Both</string>
    <string name="live_wallpaper">Live Wallpaper</string>
    <string name="error_copying_file">Error copying file</string>
    <string name="error_prepare_file">Error: Could not prepare image file</string>
    <string name="error_live_wallpaper_not_supported">Device does not support live wallpapers.</string>
    <string name="error_set_gif">Error setting GIF: %s</string>
    <string name="error_set_video" translatable="false">Error setting video: %s</string>
    <string name="error">Error: %s</string>
    <string name="need_permission_to_save">Need permission to save image.</string>
    <string name="wallpaper_set_success">Wallpaper set successfully!</string>
    <string name="please_enter_url">Please enter a URL</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="download_success_title">Notification</string>
    <string name="download_success_message">Wallpaper saved successfully to Pictures/PionBase</string>
    <string name="download_error_message">Error: %1$s</string>
    <string name="english_lang">English</string>
    <string name="url_wallpaper" translatable="false">URL Wallpaper</string>
    <string name="enter_image_url" translatable="false">Enter Image URL</string>
    <string name="preview_image" translatable="false">Preview Image</string>
    <string name="title_interval_dialog" translatable="false">Select time interval (minutes)</string>
    <string name="cannot_select_image">Cannot select image</string>
    <string name="media_selected">Media selected</string>
    <string name="theme_setting" translatable="false">Theme</string>
    <string name="text_and_quote" translatable="false">Text &amp; Quote</string>
    <string name="select_quote" translatable="false">Select Quote</string>
    <string name="edit_text" translatable="false">Edit Text</string>
    <string name="font" translatable="false">Font</string>
    <string name="style" translatable="false">Style</string>
    <string name="color" translatable="false">Color</string>
    <string name="shadow" translatable="false">Shadow</string>
    <string name="text_size" translatable="false">Text Size</string>
    <string name="text_alignment" translatable="false">Alignment</string>
    <string name="save_wallpaper" translatable="false">Save Image</string>
    <string name="save_quote_success" translatable="false">Image saved successfully!</string>
    <string name="add_quote_on_wallpaper" translatable="false">Add Quote</string>
    <string name="align_left" translatable="false">Left</string>
    <string name="align_center" translatable="false">Center</string>
    <string name="align_right" translatable="false">Right</string>
    <string name="theme_system" translatable="false">System Default</string>
    <string name="theme_light" translatable="false">Light</string>
    <string name="theme_dark" translatable="false">Dark</string>
    <string name="choose_theme" translatable="false">Choose Theme</string>
    <string name="dynamic_color" translatable="false">Dynamic Color (Material You)</string>
    <string name="cache_management" translatable="false">Cache Management</string>
    <string name="clear_cache" translatable="false">Clear Cache</string>
    <string name="clear_cache_confirm_title" translatable="false">Clear Cache</string>
    <string name="clear_cache_confirm_message" translatable="false">Are you sure you want to clear the cache? This will free up storage space on your device.</string>
    <string name="clear_cache_success" translatable="false">Cache cleared successfully!</string>
    <string name="clear_cache_failed" translatable="false">Failed to clear cache!</string>
    <string name="qs_tile_random_wallpaper" translatable="false">Next Wallpaper</string>
    <string name="qs_tile_changing_wallpaper" translatable="false">Changing wallpaper&#8230;</string>
    <string name="qs_tile_wallpaper_changed_success" translatable="false">Wallpaper changed successfully!</string>
    <string name="qs_tile_wallpaper_changed_error" translatable="false">Failed to change wallpaper</string>
    <string name="download_history_recent_views" translatable="false">Download History &amp; Recent Views</string>
    <string name="recent_views" translatable="false">Recent Views</string>
    <string name="download_and_set_history" translatable="false">Downloads &amp; Applied</string>
    <string name="no_history_yet" translatable="false">No history available yet</string>
    <string name="clear_history_title" translatable="false">Clear History</string>
    <string name="clear_history_message" translatable="false">Are you sure you want to clear this history?</string>
</resources>
