<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivBackgroundWallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_transparent_black_A0" />

    <ImageView
        android:id="@+id/ivFullWallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/tvImageName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:elevation="@dimen/_10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120dp"
        android:background="@drawable/bg_gradient_top"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:padding="@dimen/_8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSetWallpaper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:ellipsize="end"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minHeight="@dimen/_48dp"
            android:paddingStart="@dimen/_12dp"
            android:paddingEnd="@dimen/_12dp"
            android:singleLine="true"
            android:text="@string/set_as_wallpaper"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:cornerRadius="@dimen/_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabAddQuote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:contentDescription="@string/add_quote_on_wallpaper"
            android:src="@drawable/ic_text_quote"
            app:backgroundTint="?attr/colorPrimaryContainer"
            app:fabCustomSize="@dimen/_48dp"
            app:maxImageSize="@dimen/_22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabDownload"
            app:layout_constraintStart_toEndOf="@id/btnSetWallpaper"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimaryContainer" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:contentDescription="@string/download_wallpaper"
            android:src="@android:drawable/stat_sys_download"
            app:backgroundTint="?attr/colorPrimaryContainer"
            app:fabCustomSize="@dimen/_48dp"
            app:maxImageSize="@dimen/_22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabShare"
            app:layout_constraintStart_toEndOf="@id/fabAddQuote"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimaryContainer" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:contentDescription="@string/share_wallpaper"
            android:src="@drawable/ic_share"
            app:backgroundTint="?attr/colorPrimaryContainer"
            app:fabCustomSize="@dimen/_48dp"
            app:maxImageSize="@dimen/_22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabFavorite"
            app:layout_constraintStart_toEndOf="@id/fabDownload"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimaryContainer" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:contentDescription="@string/favorite_wallpaper"
            android:src="@drawable/ic_heart"
            app:backgroundTint="?attr/colorPrimaryContainer"
            app:fabCustomSize="@dimen/_48dp"
            app:maxImageSize="@dimen/_22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fabShare"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnPrimaryContainer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
